--- a/Table City/UserSettings/Search.settings
+++ b/Table City/UserSettings/Search.settings
@@ -7,9 +7,9 @@ onBoardingDoNotAskAgain = true
 showPackageIndexes = false
 showStatusBar = false
 scopes = {
-	"last_search.DD5CDD96" = "OVRControllerHel"
+	"last_search.DD5CDD96" = ""
 	"OpenInspectorPreview.DD5CDD96" = "0"
-	"currentGroup.DD5CDD96" = "menu"
+	"currentGroup.DD5CDD96" = "scene"
 	"last_search.2138236A" = "light"
 	"OpenInspectorPreview.2138236A" = "0"
 	"currentGroup.2138236A" = "asset"
